<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/home"/>

<!--    <item-->
<!--        android:id="@+id/search"-->
<!--        android:title="@string/cart"-->
<!--        app:showAsAction="always"-->
<!--        android:icon="@drawable/cart"/>-->

    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        app:showAsAction="always"
        android:icon="@drawable/favorite"/>

    <item
        android:id="@+id/account"
        android:title="@string/account"
        app:showAsAction="always"
        android:icon="@drawable/account"/>

</menu>

