<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/ic_back_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="@dimen/_10sdp"
                android:inputType="textVisiblePassword"
                android:fontFamily="@font/poppins_regular"
                android:singleLine="true"
                android:drawablePadding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:background="@null"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/date_of_birth"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date_of_birth"
                android:textSize="@dimen/_10sdp"
                android:inputType="textVisiblePassword"
                android:fontFamily="@font/poppins_regular"
                android:singleLine="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:drawablePadding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:background="@null"/>

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/notifications"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_back_10"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/update" />

    </LinearLayout>

</layout>