<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/white_above_back">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:text="@string/add_money"/>

            <EditText
                android:id="@+id/etMoney"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_amount"
                android:layout_marginTop="@dimen/_20sdp"
                android:inputType="number"
                android:textStyle="bold"
                android:maxLength="5"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:gravity="center"
                android:background="@drawable/orange_outline_back"
                android:textSize="@dimen/_15sdp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:layout_margin="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/orange_back_10"/>

        </LinearLayout>

    </RelativeLayout>

</layout>